documentation and maintenance

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -10,6 +10,7 @@ noinst_PROGRAMS = announce_example_1 \
                   announce_example_5 \
                   hello_world_example \
                   math_actor_example \
+                  dancing_kirby \
                   dining_philosophers
 
 announce_example_1_SOURCES = announce_example_1.cpp
@@ -19,6 +20,7 @@ announce_example_4_SOURCES = announce_example_4.cpp
 announce_example_5_SOURCES = announce_example_5.cpp
 hello_world_example_SOURCES = hello_world_example.cpp
 math_actor_example_SOURCES = math_actor_example.cpp
+dancing_kirby_SOURCES = dancing_kirby.cpp
 dining_philosophers_SOURCES = dining_philosophers.cpp
 
 EXAMPLES_LIBS = -L../.libs/ -lcppa $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB)
@@ -30,5 +32,6 @@ announce_example_4_LDADD = $(EXAMPLES_LIBS)
 announce_example_5_LDADD = $(EXAMPLES_LIBS)
 hello_world_example_LDADD = $(EXAMPLES_LIBS)
 math_actor_example_LDADD = $(EXAMPLES_LIBS)
+dancing_kirby_LDADD = $(EXAMPLES_LIBS)
 dining_philosophers_LDADD = $(EXAMPLES_LIBS)
 
