--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ examples/announce_example_5
 examples/hello_world_example
 examples/math_actor_example
 examples/dining_philosophers
+examples/dancing_kirby
