refactoring of scheduled_actor and single_reader_queue

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,6 @@ lib_LTLIBRARIES = libcppa.la
 
 libcppa_la_SOURCES = \
     src/abstract_event_based_actor.cpp \
-    src/abstract_scheduled_actor.cpp \
     src/abstract_tuple.cpp \
     src/actor.cpp \
     src/actor_count.cpp \
@@ -46,6 +45,7 @@ libcppa_la_SOURCES = \
     src/receive.cpp \
     src/ripemd_160.cpp \
     src/scheduled_actor.cpp \
+    src/scheduled_actor_dummy.cpp \
     src/scheduler.cpp \
     src/self.cpp \
     src/serializer.cpp \
@@ -123,7 +123,9 @@ nobase_library_include_HEADERS = \
     cppa/detail/pseudo_tuple.hpp \
     cppa/detail/ptype_to_type.hpp \
     cppa/detail/receive_loop_helper.hpp \
+    cppa/detail/recursive_queue_node.hpp \
     cppa/detail/ref_counted_impl.hpp \
+    cppa/detail/scheduled_actor_dummy.hpp \
     cppa/detail/serialize_tuple.hpp \
     cppa/detail/singleton_manager.hpp \
     cppa/detail/swap_bytes.hpp \
