added distributed binary to list of ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,65 @@
-html/
-.DS_Store
-*.o
-*.dylib
-test
-*.png
-*.dat
-*.ii
-*.s
-*.tmp
-*.la
-*.lo
-*.dump
 *.beam
 *.class
-benchmarks/mailbox_performance
-benchmarks/actor_creation
-benchmarks/mixed_case
-benchmarks/matching
-theron_mailbox_performance
-.libs/
+*.dat
+*.dump
+*.dylib
+*.ii
+*.la
+*.lo
+*.o
+*.png
+*.s
+*.tmp
+.DS_Store
 .deps/
-libcppa.pc
+.libs/
+4threads
+8threads
+INSTALL
+Makefile
 Makefile.in
+a.out*
 aclocal.m4
 autom4te.cache/
-gen_server/parallel_send
-gen_server/sequential_send
-gen_server/test.dSYM/
-depcomp
-install-sh
-libtool
-ltmain.sh
-missing
-unit_testing/Makefile.in
-unit_testing/unit_tests
-unit_testing/.deps/
-config.*
-configure
-INSTALL
-m4/libtool.m4
-m4/lt*.m4
-a.out*
-queue_test
-cppa.creator.user
-8threads
-4threads
-libcppa.Makefile
-variadic_templates_test
-variadic_templates_test.dSYM/
-Makefile
-unit_testing/Makefile
-libcppa.so*
+benchmarks/actor_creation
+benchmarks/distributed
+benchmarks/mailbox_performance
+benchmarks/matching
+benchmarks/mixed_case
 blob/cppatest
 callgrind.out*
+config.*
+configure
+cppa.creator.user
+depcomp
 examples/announce_example_1
 examples/announce_example_2
 examples/announce_example_3
 examples/announce_example_4
 examples/announce_example_5
+examples/dancing_kirby
+examples/dining_philosophers
 examples/hello_world_example
 examples/math_actor_example
-examples/dining_philosophers
-examples/dancing_kirby
+gen_server/parallel_send
+gen_server/sequential_send
+gen_server/test.dSYM/
+html/
+install-sh
+libcppa.Makefile
+libcppa.pc
+libcppa.so*
+libtool
+ltmain.sh
+m4/libtool.m4
+m4/lt*.m4
+missing
+queue_test
+test
+theron_mailbox_performance
+unit_testing/.deps/
+unit_testing/Makefile
+unit_testing/Makefile.in
+unit_testing/unit_tests
+variadic_templates_test
+variadic_templates_test.dSYM/
