minor send optimization

--- a/benchmarks/application.conf
+++ b/benchmarks/application.conf
@@ -1,31 +1,3 @@
-#benchmark {
-#  include "common"
-#
-#  akka {
-#    loglevel = ERROR
-#    remote {
-#      netty.port = 0
-#      untrusted-mode = on
-#      transport = "akka.remote.netty.NettyRemoteTransport"
-#    }
-#  }
-#}
-
-benchmark {
-  akka {
-    loglevel = ERROR
-    actor {
-      provider = "akka.remote.RemoteActorRefProvider"
-    }
-    remote {
-      netty {
-        hostname = "127.0.0.1"
-        port = 0
-      }
-    }
-  }
-}
-
 pongServer {
   akka {
     loglevel = ERROR
@@ -33,8 +5,12 @@ pongServer {
       provider = "akka.remote.RemoteActorRefProvider"
     }
     remote {
+      untrusted-mode = on
+      remote-daemon-ack-timeout = 300s
       netty {
-        hostname = "127.0.0.1"
+        backoff-timeout = 0ms 
+        connection-timeout = 300s
+        hostname = "mobi10"
         port = 2244
       }
     }
