--- a/benchmarks/application.conf
+++ b/benchmarks/application.conf
@@ -1,3 +1,16 @@
+benchmark {
+    akka {
+        loglevel = ERROR
+        actor.provider = "akka.remote.RemoteActorRefProvider"
+        remote {
+            untrusted-mode = on
+            remote-daemon-ack-timeout = 300s
+            netty {
+                connection-timeout = 1800s
+            }
+        }
+    }
+}
 pongServer {
   akka {
     loglevel = ERROR
@@ -9,8 +22,11 @@ pongServer {
       remote-daemon-ack-timeout = 300s
       netty {
         backoff-timeout = 0ms 
-        connection-timeout = 300s
-        hostname = "mobi10"
+        connection-timeout = 1800s
+        read-timeout = 1800s
+        write-timeout = 10s
+        all-timeout = 1800s
+        #hostname = "mobi10"
         port = 2244
       }
     }
