fixed akka benchmark

--- a/benchmarks/application.conf
+++ b/benchmarks/application.conf
@@ -3,11 +3,12 @@ benchmark {
         loglevel = ERROR
         actor.provider = "akka.remote.RemoteActorRefProvider"
         remote {
+            transport = "akka.remote.netty.NettyRemoteTransport"
             untrusted-mode = on
-            remote-daemon-ack-timeout = 300s
-            netty {
-                connection-timeout = 1800s
-            }
+#            remote-daemon-ack-timeout = 300s
+#            netty {
+#                connection-timeout = 1800s
+#            }
         }
     }
 }
@@ -18,13 +19,14 @@ pongServer {
       provider = "akka.remote.RemoteActorRefProvider"
     }
     remote {
+        transport = "akka.remote.netty.NettyRemoteTransport"
       untrusted-mode = on
-      remote-daemon-ack-timeout = 300s
+#      remote-daemon-ack-timeout = 300s
       netty {
-        backoff-timeout = 0ms 
+#        backoff-timeout = 0ms 
         connection-timeout = 1800s
-        read-timeout = 1800s
-        write-timeout = 10s
+#        read-timeout = 1800s
+#        write-timeout = 10s
         all-timeout = 1800s
         #hostname = "mobi10"
         port = 2244
