--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -3,12 +3,11 @@ ACLOCAL_AMFLAGS = -I ../m4
 
 AM_CXXFLAGS = -I../ --std=c++0x -pedantic -Wall -Wextra
 
-noinst_PROGRAMS = actor_creation mailbox_performance mixed_case_libcppa mixed_case_libprocess matching distributed
+noinst_PROGRAMS = actor_creation mailbox_performance mixed_case matching distributed
 
 actor_creation_SOURCES = actor_creation.cpp
 mailbox_performance_SOURCES = mailbox_performance.cpp
-mixed_case_libcppa_SOURCES = mixed_case_libcppa.cpp
-mixed_case_libprocess_SOURCES = mixed_case_libprocess.cpp
+mixed_case_SOURCES = mixed_case.cpp
 matching_SOURCES = matching.cpp
 distributed_SOURCES = distributed.cpp
 
