ignore executables, library files and build directory

--- a/.gitignore
+++ b/.gitignore
@@ -21,32 +21,16 @@ Makefile.in
 a.out*
 aclocal.m4
 autom4te.cache/
-benchmarks/actor_creation
-benchmarks/distributed
-benchmarks/mailbox_performance
-benchmarks/matching
-benchmarks/mixed_case
-blob/cppatest
 callgrind.out*
 config.*
 configure
 cppa.creator.user
 depcomp
-examples/announce_example_1
-examples/announce_example_2
-examples/announce_example_3
-examples/announce_example_4
-examples/announce_example_5
-examples/dancing_kirby
-examples/dining_philosophers
-examples/hello_world_example
-examples/math_actor_example
 gen_server/parallel_send
 gen_server/sequential_send
 gen_server/test.dSYM/
 html/
 install-sh
-libcppa.Makefile
 libcppa.pc
 libcppa.so*
 libtool
@@ -63,3 +47,6 @@ unit_testing/Makefile.in
 unit_testing/unit_tests
 variadic_templates_test
 variadic_templates_test.dSYM/
+bin/*
+build/*
+lib/*
