Support for 'make test'.
This commit harnesses CMake's unit test infrastructure which redirects the
output of the unit test executable to `/dev/null`. If this is not desired, one
could instead manually add a 'test' Makefile target as follows:

    add_custom_target(test ${EXECUTABLE_OUTPUT_PATH}/unit_tests)
    add_dependencies(test unit_tests)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,6 +181,7 @@ else ()
   set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin CACHE PATH "Single directory for all executables")
 endif ()
 
+enable_testing()
 add_subdirectory(unit_testing)
 add_subdirectory(examples)
 add_subdirectory(benchmarks)
